Avoid button select state on mobile browsers

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;
 }
 
 html, body {
